Updated the CSS file to include better spacing, as well as added a reset function to reset the score when a winner is declared.  Also fixed semantic issues.

--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 body {
-    display: flexbox;
+    display: flex;
+    flex-direction: column;
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: center;
+    margin: 25px;
 }
 
+
 #buttons {
-    justify-content: center;
+    flex-direction: row;
+    margin: 25px;
 }
 
 .selection {
     padding: 0;
-    margin: 100px;
-
+    margin: 0 25px;
 }
 
 h1 {
